# project-talentscreen-wbox-cli

./: .env.example  .env.template  .gitignore  API.md  CHANGELOG.md  CLAUDE_AGENT_GUIDE.md  CLAUDE_IMPLEMENTATION_SUMMARY.md  CLAUDE_QUICKSTART.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_REVIEW.md  ENHANCEMENTS.md  FIXES_SUMMARY.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.txt  LICENSE  MANIFEST.in  Makefile  PRODUCTION_FIXES.md  PROJECT_DOCUMENTATION.md  QUICK_START_FIXED.md  README.md  REAL_TIME_UI_IMPLEMENTATION.md  SECURITY.md  SUMMARY.md  UI_REAL_TIME_APPLICATION_GUIDE.js  USAGE.md  build.bat  build.command  claude_examples.py  cli-install.sh  coder_test.txt  oracle_check.py  package-lock.json  patch_fill.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_report.bat  (+8 more)
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
.github/: PULL_REQUEST_TEMPLATE.md
config/: portals.example.yml  profile.example.yml
docs/: ANALYTICS_PLAN.md  APPLICATION_MEMORY.md  Architecture.md  CLAUDE.md  CODE_OVERVIEW.md  DATA_CONTRACT.md  DEBUG_SYSTEM.md  DEBUG_SYSTEM_SUMMARY.md  ENGINE_V2_VS_LEGACY.md  EXECUTION_ACTION_REFERENCE.md  EXECUTION_FLOW_DIAGRAM.md  EXECUTION_LAYER.md  EXECUTION_LAYER_SUMMARY.md  OBSERVABILITY.md  QUICKSTART.md  README.md  SELF_HEALING.md  SELF_HEALING_SUMMARY.md  SEMANTIC_ENGINE_IMPLEMENTATION.md  SETUP_WINDOWS_MAC.md  SYSTEM_SUMMARY.md  TESTING.md
extension_tests/: manifest.json
jobcli/: __init__.py  __main__.py
logs/: jobcli.jsonl
resume/: example_resume.json  (+1 more)
(+438 files in other folders)
