[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobcli"
version = "0.1.0"
description = "Production-grade CLI for automated job applications across multiple ATS systems"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "google-genai>=0.1.1",
    "sqlalchemy>=2.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dateutil>=2.8.0",
    "structlog>=23.2.0",
    "langgraph>=0.0.40",
    "langchain-core>=0.1.0",
    "cryptography>=41.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-playwright>=0.4.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
wboxcli = "jobcli.cli.entry:main"
jobcli = "jobcli.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["jobcli*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
